# dustline

./: .env.example  .gitignore  README.md  STEAM_NETWORK.md  UPDATE.md  UPDATES.md  latest.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml  website.yml
keys/: dustline-ci.key.pub  dustline-plain.key.pub  dustline.key.pub.example
scripts/: _bump.js  _publish_manifest.js  publish-update.mjs  ready-check.mjs  release.mjs
src/: bot.ts  combatFx.ts  engine.ts  hats.ts  index.html  input.ts  lobby.ts  main.ts  renderer.ts  skins.ts  sound.ts  types.ts  ui.ts  updater.ts  vfx.ts  weapons.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  network.rs  steam_manager.rs  steam_net.rs
src-tauri/src/game/: arena.rs  collision.rs  grenade.rs  mod.rs  pickup.rs  player.rs  projectile.rs  state.rs  weapons.rs
src-tauri/windows/: hooks.nsh
website/: package.json  vercel.json
website/public/: index.html  site.js  styles.css
website/public/downloads/: DUSTLINE_1.0.10_x64-setup.exe.sig  DUSTLINE_1.0.11_x64-setup.exe.sig  DUSTLINE_1.0.12_x64-setup.exe.sig  DUSTLINE_1.0.13_x64-setup.exe.sig  DUSTLINE_1.0.1_x64-setup.exe.sig  DUSTLINE_1.0.2_x64-setup.exe.sig  DUSTLINE_1.0.3_x64-setup.exe.sig  DUSTLINE_1.0.4_x64-setup.exe.sig  DUSTLINE_1.0.5_x64-setup.exe.sig  DUSTLINE_1.0.6_x64-setup.exe.sig  DUSTLINE_1.0.7_x64-setup.exe.sig  DUSTLINE_1.0.8_x64-setup.exe.sig  DUSTLINE_1.0.9_x64-setup.exe.sig
website/scripts/: sync-version.js
(+1 files in other folders)
